--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div class="container">
 
       <header>
-        <h1>Amie Awesomness</h1>
+        <h1>Amie</h1>
       </header>
 
       <nav>
         <ul class="NavBar">
           <a href="#" class="navElem"><li>Home</li></a>
           <a href="#" class="navElem"><li>About</li></a>
-          <a href="#" class="navElem"><li>Der</li></a>
+          <a href="#" class="navElem"><li>Work</li></a>
         </ul>
       </nav>
 
