--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
       <nav>
         <ul class="NavBar">
-          <a href="#" class="navElem"><li>Home</li></a>
           <a href="#" class="navElem"><li>About</li></a>
           <a href="#" class="navElem"><li>Work</li></a>
+          <a href="#" class="navElem"><li>Other Projects</li></a>
         </ul>
       </nav>
 
       <main>
-        <iframe src="" width="" height=""></iframe>
+        <iframe src=Images/buckskin.jpg"" width="" height=""></iframe>
         <iframe src="" width="" height=""></iframe>
         <iframe src="" width="" height=""></iframe>
         <iframe src="" width="" height=""></iframe>
